@@ -1,3 +1,8 @@
+2012-12-14  Akinori MUSHA  <knu@iDaemons.org>  (tiny change)
+
+	* sieve-mode.el (sieve-font-lock-keywords):
+	Keywords should be word delimited.  (Bug#13173)
+
 2012-12-13  Andreas Schwab  <schwab@suse.de>
 
 	* tls.el (tls-program): Update customize type.
